--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ license = "MIT"
 description = "2D grid library which serves as fundamental building block for any 2D game built on the concept of grid"
 homepage = "https://github.com/eduardonunesp/das-grid"
 repository = "https://github.com/eduardonunesp/das-grid.git"
+
+[dev-dependencies]
+pretty_assertions = "0.7.2"
