--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,8 @@ description = "2D grid library which serves as fundamental building block for an
 homepage = "https://github.com/eduardonunesp/das-grid"
 repository = "https://github.com/eduardonunesp/das-grid.git"
 
+[dependencies]
+parse-display-derive = "0.4.1"
+
 [dev-dependencies]
 pretty_assertions = "0.7.2"
