--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,17 @@
 [package]
 name = "das-grid"
 authors = ["Eduardo Pereira <eduardonunesp@gmail.com>"]
-version = "0.1.5"
-edition = "2018"
+version = "0.1.6"
+edition = "2021"
 license = "MIT"
 description = "2D grid library which serves as fundamental building block for any 2D game built on the concept of grid"
 homepage = "https://github.com/eduardonunesp/das-grid"
 repository = "https://github.com/eduardonunesp/das-grid.git"
 
 [dependencies]
-parse-display-derive = "0.4.1"
+thiserror = "1.0"
+parse-display-derive = "0.8.2"
 
 [dev-dependencies]
 pretty_assertions = "0.7.2"
-tetra = "0.6.3"
+ggez = "0.9.3"
